kustomize/overlays/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: uniselec-api-stg
  labels:
    name: uniselec-api-stg
    app: uniselec-api
    environment: staging
    managed-by: kustomize
    project: uniselec
