kustomize/overlays/staging/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uniselec-api
spec:
  template:
    metadata:
      labels:
        environment: staging
    spec:
      containers:
        - name: uniselec-api
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi
